crates/aranya-policy-compiler/tests/data/global_let/duplicate_globals_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `x` is defined multiple times
  |
1 | let x = 10
  |     - previous defintion here
2 | let x = 5
  |     ^ re-defined here
